# raspberry-pi-mailbox-server

./: .dashchat-inspect.txt  .dashchat-inspect2.txt  .gitignore  .tmp-diag.txt  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: build-sd-image.yml
crates/larp-bot/: Cargo.toml
crates/larp-bot/src/: bot.rs  cast.rs  config.rs  identity.rs  lib.rs  main.rs  qr.rs  scenario.rs
crates/larp-bot/tests/: e2e.rs
docs/: larp-design.md
env/: wifi-ap.env
mikrotik/: dashchat-map-lite.rsc
nix/: appliance.nix  captive-portal.nix  map-lite.nix  nixos-module.nix  package.nix  portal.nix  rpi.nix
portal/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.js
portal/src/: App.svelte  app.css
scenarios/: firefighters.toml  hospital.toml  journalist.toml  relative.toml
scripts/: detect-sd-card.sh  ethernet-set-time.sh  ethernet-ssh.sh  find-pi.sh  flash-sd-image.sh
