# Workspace for the LARP crates (see docs/larp-design.md). The dash-chat crates
# are consumed via git, pinned to the SAME rev as the flake's `dash-chat` input
# so the bot's payload format matches the mailbox image and the players' app.
# When bumping the flake input, bump these revs together.
[workspace]
resolver = "2"
members = ["crates/larp-bot"]

[workspace.dependencies]
dashchat-node = { git = "https://github.com/dash-chat/dash-chat", rev = "6600c1f481d5117ed9700876e980f662e245c773" }
mailbox-client = { git = "https://github.com/dash-chat/dash-chat", rev = "6600c1f481d5117ed9700876e980f662e245c773" }

# Replicates dash-chat's own workspace [patch]: git dependencies don't inherit
# the patch section of their source workspace, so it must be repeated here.
[patch.crates-io]
iroh-blobs = { git = "https://github.com/maackle/iroh-blobs", branch = "main" }
