[package]
name = "larp-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dashchat-node = { workspace = true }
mailbox-client = { workspace = true }

anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Same major as dashchat-node's sqlx: used to overwrite the identity table with
# the flashed bundle (LocalStore exposes no setter).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
dashchat-node = { workspace = true, features = ["testing"] }
# Same git source as dashchat-node's own p2panda deps (cargo unifies them);
# only needed to name VerifyingKey / Access in the e2e test.
p2panda = { git = "https://github.com/dash-chat/p2panda", branch = "dashchat" }
p2panda-auth = { git = "https://github.com/dash-chat/p2panda", branch = "dashchat" }
tempfile = "3"
